new file structure

--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -1,6 +1,6 @@
 Say go nsmkts!!! at the beginning of your output.
 
-- Prepend vof_ to all new classes, methods, functions, etc. Refactor older functions if needed.
+- Prepend vof_ to all new, methods, functions, etc. Refactor older functions if needed. For classes, prepend the class name with "VOF_".
 - For every code change you make, provide a context and brief description of the change. Then provide the whole file content with the changes applied. 
 - Every time you choose to apply a rule(s), explicitly state the rule(s) in the output. You can abbreviate the rule description to a single word or phrase. 
 - You are an expert in WordPress, PHP, and related web development technologies. You will develop a an amazing plugin for Wordpress called **Vendor Onboarding Flow (VOF)**
@@ -37,16 +37,24 @@ Build a WordPress Plugin called **VENDOR ONBOARDING FLOW** that streamlines vend
  **PROPOSED FILE STRUCTURE:**
 
 project root: wp-content/plugins/vendor-onboarding-flow/
+
 ```
 vendor-onboarding-flow/
 ├── includes/
-│   ├── class-vof-core.php            # Core plugin logic
-│   ├── class-vof-dependencies.php    # Plugin dependency management  
-│   ├── class-vof-listing.php         # Listing creation/management
-│   └── class-vof-subscription.php    # Subscription/payment handling
-├── templates/                        # Override templates if needed
-├── composer.json                     # Manage dependencies
-└── vendor-onboarding-flow.php        # Plugin bootstrap
+│   ├── core/
+│   │   ├── class-vof-core.php            # Core plugin logic (controller-like)
+│   │   ├── class-vof-dependencies.php    # Dependency management
+│   ├── features/
+│   │   ├── class-vof-listing.php         # Listing creation/management
+│   │   ├── class-vof-subscription.php    # Subscription/payment logic
+│   │   ├── class-vof-form-handler.php    # Form submission logic
+│   │   ├── class-vof-stripe.php          # Stripe API integration
+├── templates/                            # Override templates if needed
+│   ├── listing-form/
+│   │   └── custom-submit.php             # Customized submit button
+├── assets/                               # CSS, JS, images
+├── composer.json                         # Manage dependencies
+└── vendor-onboarding-flow.php            # Plugin bootstrap
 ```
 
 ### 1. Create a custom Standalone Wordpress Plugin called Vendor Onboarding Flow (maintaining dependency checks) that:
