--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -40,21 +40,18 @@ project root: wp-content/plugins/vendor-onboarding-flow/
 
 ```
 vendor-onboarding-flow/
-├── includes/
-│   ├── core/
-│   │   ├── class-vof-core.php            # Core plugin logic (controller-like)
-│   │   ├── class-vof-dependencies.php    # Dependency management
-│   ├── features/
-│   │   ├── class-vof-listing.php         # Listing creation/management
-│   │   ├── class-vof-subscription.php    # Subscription/payment logic
-│   │   ├── class-vof-form-handler.php    # Form submission logic
-│   │   ├── class-vof-stripe.php          # Stripe API integration
-├── templates/                            # Override templates if needed
-│   ├── listing-form/
-│   │   └── custom-submit.php             # Customized submit button
-├── assets/                               # CSS, JS, images
-├── composer.json                         # Manage dependencies
-└── vendor-onboarding-flow.php            # Plugin bootstrap
+ ├── includes/
+ │   │   ├── class-vof-core.php            # Core plugin logic (controller-like)
+ │   │   ├── class-vof-dependencies.php    # Dependency management
+ │   │   ├── class-vof-listing.php         # Listing creation/management
+ │   │   ├── class-vof-subscription.php    # Subscription/payment logic
+ │   │   ├── class-vof-form-handler.php    # Form submission logic
+ │   │   ├── class-vof-stripe.php          # Stripe API integration
+ ├── templates/                            # Override templates if needed
+ ├── assets/                               # CSS, JS, images (optional)
+ ├── composer.json                         # Manage dependencies
+ └── vendor-onboarding-flow.php            # Plugin bootstrap
+ 
 ```
 
 ### 1. Create a custom Standalone Wordpress Plugin called Vendor Onboarding Flow (maintaining dependency checks) that:
@@ -100,9 +97,12 @@ vendor-onboarding-flow/
 
     
      * **[ CASE-2 ]->** "vendor-onboarding-plugin" plugin is activated AND a wandering user exists AND subscription/membership is not active AND navigates to url with slug "post-an-ad"
-       * follow same flow and behaviors as stated in [ CASE-1 ]    
+       * follow same flow and behaviors as stated in [ CASE-1 ] 
 
-     * **[ CASE-3 ]->** "vendor-onboarding-plugin" plugin is activated AND user exists (logged in) AND subscription/membership is active AND navigates to url with slug "post-an-ad"
+     * **[ CASE-3 ]->** "vendor-onboarding-plugin" plugin is activated AND a wandering user exists AND subscription/membership is not active AND navigates to url ending in: "/checkout/membership"
+       * user should be redirected to stripe checkout section for subscription tier selection and payment.    
+
+     * **[ CASE-4 ]->** "vendor-onboarding-plugin" plugin is activated AND user exists (logged in) AND subscription/membership is active AND navigates to url with slug "post-an-ad"
 
        * in this case the "vendor-onboarding-plugin" plugin logic WILL NOT take over.
          * existing code, logic and behavior of the original plugins will take over instead.
