added api boilerplate; ready for stripe imp

--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -39,19 +39,46 @@ Build a WordPress Plugin called **VENDOR ONBOARDING FLOW** that streamlines vend
 project root: wp-content/plugins/vendor-onboarding-flow/
 
 ```
-vendor-onboarding-flow/
- ├── includes/
- │   │   ├── class-vof-core.php            # Core plugin logic (controller-like)
- │   │   ├── class-vof-dependencies.php    # Dependency management
- │   │   ├── class-vof-listing.php         # Listing creation/management
- │   │   ├── class-vof-subscription.php    # Subscription/payment logic
- │   │   ├── class-vof-form-handler.php    # Form submission logic
- │   │   ├── class-vof-stripe.php          # Stripe API integration
- ├── templates/                            # Override templates if needed
- ├── assets/                               # CSS, JS, images (optional)
- ├── composer.json                         # Manage dependencies
- └── vendor-onboarding-flow.php            # Plugin bootstrap
- 
+wp-content/plugins/vendor-onboarding-flow/
+├── .cursorrules.md                # Plugin development rules and guidelines
+├── .gitignore                     # Git ignore rules
+├── assets/
+│   └── js/
+│       ├── txt-files-maybe-reuse/ # Reference JavaScript files
+│       │   ├── vof-form-validation.txt
+│       │   ├── vof-gallery-extension.txt
+│       │   └── vof-listing-submit.txt
+│       └── vof-listing-submit.js  # Active listing submission handler
+├── composer.json                  # Composer package definition
+├── composer.lock                  # Composer dependency lock file
+├── includes/
+│   ├── class-vof-assets.php      # Asset management
+│   ├── class-vof-constants.php   # Plugin constants
+│   ├── class-vof-core.php        # Core plugin functionality
+│   ├── class-vof-dependencies.php # Plugin dependencies checker
+│   ├── class-vof-form-handler.php # Form processing
+│   └── class-vof-listing.php     # Listing management
+├── templates/
+│   └── listing-form/
+│       └── vof-contact.php       # Contact form template
+├── utils/
+│   ├── vof-stripe/
+│   └── helpers/
+│       ├── class-vof-helper-functions.php # Helper functions
+│       └── class-vof-temp-user-meta.php   # Temporary user data handling
+├── vendor/                        # Composer dependencies
+│   ├── autoload.php
+│   ├── composer/
+│   │   ├── ClassLoader.php
+│   │   ├── InstalledVersions.php
+│   │   ├── LICENSE
+│   │   ├── autoload_classmap.php
+│   │   ├── autoload_namespaces.php
+│   │   ├── autoload_psr4.php
+│   │   └── autoload_real.php
+│   └── stripe/                    # Stripe PHP library (not shown in snippets)
+└── vendor-onboarding-flow.php     # Plugin bootstrap file (not shown in snippets)
+
 ```
 
 ### 1. Create a custom Standalone Wordpress Plugin called Vendor Onboarding Flow (maintaining dependency checks) that:
