add: mod. 1s api call -> validates uuid, pops up pricing modal; need: 2nd VOF API call retireve API Tiers, display on modal

--- a/.cursorrules.md
+++ b/.cursorrules.md
@@ -40,33 +40,42 @@ project root: wp-content/plugins/vendor-onboarding-flow/
 
 ```
 wp-content/plugins/vendor-onboarding-flow/
-├── .cursorrules.md                # Plugin development rules and guidelines
-├── .gitignore                     # Git ignore rules
+├── .cursorrules.md
+├── .gitignore
+├── composer.json
+├── composer.lock
+├── api/
+│   └── class-vof-api.php
 ├── assets/
+│   ├── css/
+│   │   ├── vof-pricing-modal-style.css
+│   │   └── vof-pricing-modal-style.txt
 │   └── js/
-│       ├── txt-files-maybe-reuse/ # Reference JavaScript files
+│       ├── txt-files-maybe-reuse/
 │       │   ├── vof-form-validation.txt
 │       │   ├── vof-gallery-extension.txt
 │       │   └── vof-listing-submit.txt
-│       └── vof-listing-submit.js  # Active listing submission handler
-├── composer.json                  # Composer package definition
-├── composer.lock                  # Composer dependency lock file
+│       ├── vof-form-validation.js
+│       ├── vof-listing-submit.js
+│       ├── vof-listing-submit[JQueryVrsnFallback].txt
+│       ├── vof-orchestrator.js
+│       └── vof-pricing-modal-script.js
 ├── includes/
-│   ├── class-vof-assets.php      # Asset management
-│   ├── class-vof-constants.php   # Plugin constants
-│   ├── class-vof-core.php        # Core plugin functionality
-│   ├── class-vof-dependencies.php # Plugin dependencies checker
-│   ├── class-vof-form-handler.php # Form processing
-│   └── class-vof-listing.php     # Listing management
+│   ├── class-vof-assets.php
+│   ├── class-vof-constants.php
+│   ├── class-vof-core.php
+│   ├── class-vof-dependencies.php
+│   ├── class-vof-form-handler.php
+│   ├── class-vof-listing.php
+│   ├── class-vof-pricing-modal.php
+│   └── utils/
+│       ├── helpers/
+│       │   ├── class-vof-helper-functions.php
+│       │   └── class-vof-temp-user-meta.php
 ├── templates/
-│   └── listing-form/
-│       └── vof-contact.php       # Contact form template
-├── utils/
-│   ├── vof-stripe/
-│   └── helpers/
-│       ├── class-vof-helper-functions.php # Helper functions
-│       └── class-vof-temp-user-meta.php   # Temporary user data handling
-├── vendor/                        # Composer dependencies
+│    └── listing-form/
+│        └── vof-contact.php
+│   ├── vendor/                        # Composer dependencies
 │   ├── autoload.php
 │   ├── composer/
 │   │   ├── ClassLoader.php
