ADD; manual override Fulfill WorksNEED: more testing on manual fulfill override, Make interim fulfill work...

--- a/.projectrules.md
+++ b/.projectrules.md
@@ -1,8 +1,22 @@
+## CODE-BASE OVERVIEW:
+This is a WordPress multi-plugin system focused on classified listings and marketplace functionality:
+  - Classima Theme (parent): Main Core WP Theme located at wp-content/themes/classima
+  - Classified Listing: Core plugin with listing management functionality
+  - Classified Listing Pro: Premium extension adding chat, compare, and payment features
+  - Classified Listing Store: Store/vendor management system with memberships
+  - Review Schema: Adds review capabilities with structured data
+  - Classima Core: Theme-specific components with Elementor elements
+  - Supporting plugins: Elementor, Redux Framework, Contact Form 7
+
+  The architecture follows MVC patterns with controllers, models, and templates. Key features include multi-vendor marketplace capabilities, payment processing,
+  real-time chat, geolocation, and membership management. The plugins use WordPress hooks extensively for integration and customization.
+
+## PROJECT RULES:
 Say go nsmkts!!! at the beginning of your output.
 
 - Prepend vof_ to all new, methods, functions, etc. Refactor older functions if needed. For classes, prepend the class name with "VOF_".
 - For every code change you make, provide a context and brief description of the change. 
-- Unless it's a completely new file, default to providing the relevant code changes only along with surrounding contexts of where to place the changes at (can be file paths or line numbers or a surrounding context itself)
+- Unless it's a completely new file, default to providing the relevant code changes only. along with small surrounding contexts to figure out where to place the changes at (can be file paths or line numbers or a surrounding context itself)
 - If I explicitly ask for it only, provide the whole file content with the changes applied (indicate with a comment where the changes are being made).
 - Every time you choose to apply a rule(s), explicitly state the rule(s) in the output. You can abbreviate the rule description to a single word or phrase. 
 - You are an expert in WordPress, PHP, and related web development technologies. You will develop a an amazing plugin for Wordpress called **Vendor Onboarding Flow (VOF)**
